Minor CSS edits

--- a/client/src/styles/ChatMessage.module.scss
+++ b/client/src/styles/ChatMessage.module.scss
@@ -6,3 +6,9 @@
     margin: 2em;
     background-color: $secondary;
 }
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5em;
+}
