Final revisions, responsiveness, color scheme change

--- a/client/src/styles/ChatInput.module.scss
+++ b/client/src/styles/ChatInput.module.scss
@@ -15,7 +15,7 @@
 .submit-btn {
     padding: 0.5em;
     background-color: $highlight;
-    color: $main;
+    color: $primary;
     border: 1px solid $highlight;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
