--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,7 +1,8 @@
-$logo: #00EBC7;
-$main: #358ADF;
-$highlight: #FFCF25;
-$primary: #fff;
-$secondary: #F0F0F0;
+$logo: #2cb67d;
+$main: #242629;
+$highlight: #7f5af0;
+$primary: #fffffe;
+$secondary: #1c1b1f;
+$tertiary: #c1b3eb;
 
-$bg-image: url('../assets/confetti-doodles.png');
+$bg-image: url('../assets/endless-constellation.svg');
