--- a/client/src/styles/Home.module.scss
+++ b/client/src/styles/Home.module.scss
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    padding: 0 1em;
+    overflow: hidden;
 }
 
 .section {
@@ -19,7 +21,7 @@
 .logo {
     text-align: center;
     font-weight: 700;
-    font-size: 2em;
+    font-size: 1.5em;
     color: $logo
 }
 
@@ -27,6 +29,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 1.5em;
+    font-size: 0.8em;
 
     & > input, select {
         margin: 1em 0;
@@ -46,9 +49,21 @@
         background-color: $highlight;
         border: 1px solid $highlight;
         border-radius: 2px;
-        color: $main;
-        font-size: 1.1em;
+        color: $primary;
+        font-size: 1.3em;
         font-weight: 500;
         cursor: pointer;
     }
+}
+
+@media (min-width: 1023px) {
+
+    .logo {
+        font-size: 2em;
+    }
+
+    .homepage-form {
+        font-size: 1em;
+    }
+
 }
