--- a/client/src/styles/Room.module.scss
+++ b/client/src/styles/Room.module.scss
@@ -7,12 +7,15 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
+    padding: 0 4%;
 }
 
 .section {
     background-color: $main;
-    width: 80%;
-    padding: 1.5em 2em;
+    width: 100%;
+    // height: 90%;
+    padding: 1.5em 1em;
     border-radius: 10px;
 }
 
@@ -27,7 +30,7 @@
 .logo {
     color: $logo;
     font-weight: 700;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .leave-btn {
@@ -37,8 +40,8 @@
     text-decoration: none;
     border: 1px solid $highlight;
     border-radius: 7px;
-    color: $main;
-    font-size: 1em;
+    color: $primary;
+    font-size: 0.8em;
     font-weight: 500;
     cursor: pointer;
 }
@@ -48,23 +51,44 @@
 .chat-dashboard {
     margin-top: 1.5em;
     display: flex;
+    gap: 1em;
 }
 
 .chat-details {
-    width: 20%;
+    width: 25%;
 }
 
 .chat-window {
     display: flex;
     flex-direction: column-reverse; // Display flex and flex direction make sure ChatWindow scrolls down with each new message
-    width: 80%;
-    background-color: $primary;
-    height: 30em;
+    width: 90%;
+    background-color: $secondary;
+    height: 70vh;
     overflow-y: scroll;
 }
 
 // Chat input
 
-.chat-input {
-    padding: 1em 1.5em;
+// .chat-input {
+//     padding-top: 1em;
+// }
+
+@media (min-width: 1023px) {
+    
+    .section {
+        padding: 1.5em 2em;
+    }
+    
+    .logo {
+        font-size: 2em;
+    }
+    
+    .leave-btn {
+        font-size: 1em;
+    }
+    
+    .chat-details {
+        width: 20%;
+    }
+
 }
